# backend/internal/api/router/camera_router.go
@@ -3,6 +3,7 @@ package router
 import (
 	"fmt"
 	"lct/internal/api/controller"
+	"lct/internal/api/middleware"
 	"lct/internal/database"
 	"lct/internal/model"
 	"lct/internal/repository"
@@ -15,10 +16,25 @@ func (r *Router) setupCameraRoutes(group fiber.Router) error {
 	if err != nil {
 		return model.ErrRouterSetupFailed{Message: fmt.Sprintf("cameras router: %+v", err)}
 	}
-	cameraController := controller.NewCameraController(cameraRepository)
+	userRepository, err := repository.NewUserPgRepository(database.PgConn.GetPool())
+	if err != nil {
+		return model.ErrRouterSetupFailed{Message: fmt.Sprintf("cameras router: %+v", err)}
+	}
+	groupRepository, err := repository.NewGroupPgRepository(database.PgConn.GetPool())
+	if err != nil {
+		return model.ErrRouterSetupFailed{Message: fmt.Sprintf("cameras router: %+v", err)}
+	}
+	cameraController := controller.NewCameraController(cameraRepository, userRepository, groupRepository)
 
 	cameras := group.Group("/cameras")
-	cameras.Post("/createOne", cameraController.CreateOne)
+	cameras.Get("/", cameraController.GetAll)
+	cameras.Get("/:id", cameraController.GetOne)
+	cameras.Get("/:id/frames", cameraController.GetFrames)
+
+	cameras.Post("/", middleware.CheckAdminRoleMiddleware(), cameraController.CreateOne)
+	cameras.Post("/many", middleware.CheckAdminRoleMiddleware(), cameraController.CreateMany)
+	cameras.Post("/updateGroup", middleware.CheckAdminRoleMiddleware(), cameraController.UpdateGroup)
+	cameras.Delete("/:id", middleware.CheckAdminRoleMiddleware(), cameraController.DeleteOne)
 
 	return nil
 }
