# backend/internal/model/camera.go
@@ -8,17 +8,18 @@ import (
 var CamerasTableName = "cameras"
 
 type Camera struct {
-	Id        int       `json:"id"`    // serial
-	Title     string    `json:"title"` // unique
-	Url       string    `json:"-"`
+	Id        int       `json:"id"` // serial
+	Uuid      string    `json:"uuid"`
+	Url       string    `json:"url"`
 	CreatedAt time.Time `json:"createdAt"` // default = current timestamp
 	UpdatedAt time.Time `json:"updatedAt"` // default = current timestamp
+	GroupIds  []int     `json:"groupIds"`
 }
 
 type CameraCreate struct {
-	Title   string `json:"title" validate:"required"`
-	Url     string `json:"url" validate:"required"`
-	GroupId int    `json:"groupId" validate:"gte=0"`
+	Uuid    string `json:"uuid"`
+	Url     string `json:"url"`
+	GroupId int    `json:"groupId"`
 }
 
 type CameraGroupUpdate struct {
@@ -28,11 +29,12 @@ type CameraGroupUpdate struct {
 }
 
 type CameraRepository interface {
-	InsertOne(c context.Context, cameraData CameraCreate) error
-	InsertMany(c context.Context, camerasData []CameraCreate) error
-	FindOne(c context.Context, filter string, value any) (Camera, error)
-	FindMany(c context.Context, contentType string) ([]Camera, error)
+	InsertOne(c context.Context, cameraData CameraCreate) (int, error)
+	InsertMany(c context.Context, camerasData []CameraCreate) ([]int, error)
+	FindOne(c context.Context, filter string, value any, userGroupIds []int) (Camera, error)
+	FindMany(c context.Context, filter string, value any, userGroupIds []int) ([]Camera, error)
 	DeleteOne(c context.Context, cameraId int) error // deletes camera source and all related frames
 	AddToGroup(c context.Context, cameraId, groupId int) error
 	RemoveFromGroup(c context.Context, cameraId, groupId int) error
+	GetGroupIds(c context.Context, cameraId int) ([]int, error)
 }
